# irc-client

./: .editorconfig  .gitignore  .jshintrc  Makefile.am  README.md  autogen.sh  configure.ac  meson.build  meson_options.txt  meson_post_install.sh  se.tingping.IrcClient.json
data/: meson.build  se.tingping.IrcClient.appdata.xml.in  se.tingping.IrcClient.data.gresource.xml  se.tingping.IrcClient.desktop.in  se.tingping.IrcClient.gresource.xml  se.tingping.IrcClient.gschema.xml  se.tingping.IrcClient.gschema.xml.in
data/gtk/: help-overlay.ui  menus.ui
data/ui/: ApplicationWindow.ui  NetworkList.ui  preferences.ui  window.ui
docs/: Makefile.am  README.md  irc-docs.xml  irc-sections.txt  libirc-docs.xml  libirc-sections.txt  meson.build
docs/xml/: meson.build
lib/: Irc.py  irc-channel.h  irc-command.c  irc-context-action.c  irc-context-manager.c  irc-context-manager.h  irc-context.c  irc-context.h  irc-enumtypes.c.template  irc-identd-service.c  irc-identd-service.h  irc-marshal.list  irc-message.c  irc-message.h  irc-private.h  irc-query.c  irc-query.h  irc-server.c  irc-server.h  irc-user-list.c  irc-user-list.h  irc-user.c  irc-utils.c  irc-utils.h  irc.h  meson.build
plugins/: meson.build
plugins/identd/: Identd.py  identd-plugin.c  identd-plugin.h  identd-service.c  identd-service.h  identd.plugin  meson.build
plugins/python_console/: PythonConsole.py  python_console.plugin
plugins/screensaver/: Screensaver.py  meson.build  org.freedesktop.ScreenSaver.xml  org.gnome.ScreenSaver.xml  screensaver-plugin.c  screensaver-plugin.h  screensaver.plugin
po/: POTFILES  POTFILES.in  meson.build
src/: Irc.py  application.js  application.lua  applicationWindow.js  irc-application.c  irc-channel.c  irc-channel.h  irc-colorscheme.c  irc-command.c  irc-context-action.c  irc-context-action.h  irc-context-manager.c  irc-context-manager.h  irc-context.c  irc-dcc-chat.c  irc-dcc-chat.h  irc-entry.c  irc-entry.h  irc-entrybuffer.c  irc-entrybuffer.h  irc-enumtypes.c.template  irc-enumtypes.h.template  irc-message.c  irc-message.h  irc-private.h  irc-query.c  irc-query.h  irc-resources.gresource.xml  irc-server.c  irc-server.h  irc-text-common.c  irc-textview.c  irc-textview.h  irc-user-list-item.c  irc-user-list-item.h  irc-user-list.c  irc-user.c  irc-user.h  irc-userlist.c  irc-utils.c  (+13 more)
src/contextview/: irc-cellrenderer-bubble.c  irc-chanstore.h
src/gui/: irc-application.c  irc-application.h  irc-chatview.h  irc-colorscheme.h  irc-entry.c  irc-entry.h  irc-entrybuffer.c  irc-entrybuffer.h  irc-text-common.c  irc-text-common.h  irc-textview.c  irc-userlist.c  irc-userlist.h  irc-window.c  irc-window.h  main.c
src/gui/contextview/: irc-cellrenderer-bubble.c  irc-cellrenderer-bubble.h  irc-chanstore.c  irc-contextview.c  irc-contextview.h
src/gui/entry/: irc-entry.c  irc-entry.h  irc-entrybuffer.c  irc-entrybuffer.h
src/gui/preferences/: irc-network-properties.c  irc-preferences-window.c
src/gui/textview/: irc-chatview.c  irc-colorscheme.c  irc-textview.c  irc-textview.h
src/preferences/: irc-network-properties.c  irc-network-properties.h  irc-network-properties.ui  irc-preferences-window.c  irc-preferences-window.h  irc-preferences-window.ui
subprojects/: libsexy3.wrap
tests/: converter-data.txt  meson.build  test-irc-message.c  test-irc-server.c  test-irc-textview.c  test-irc-utils.c
tools/: meson.build  str-hash.c
